--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -605,7 +605,7 @@ br.mo {
 
 /* 상단 비디오 */
 .video_container01 {
-    margin-bottom: 72px;
+    /*margin-bottom: 72px;*/
     height: 500px;
 }
 .video_container01 .inner_center {
@@ -617,17 +617,27 @@ br.mo {
 }
 @media screen and (max-width: 1199px){
     .video_container01 {
-        margin-bottom: 6%;
+        /*margin-bottom: 6%;*/
         height: 41.6667vw;
     }
 }
 @media screen and (max-width: 768px){
     .video_container01 {
-        margin-bottom: 9.5%;
+        /*margin-bottom: 9.5%;*/
     }
 }
 
 /* 리니어펌? */
+.quick_event:before {
+    content: '';
+    display: block;
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 221px;
+    margin-top: 162px;
+    background-color: #f97863;
+}
 .sect_linearfirm {
     position: relative;
     margin-bottom: -20px;
