--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -579,6 +579,7 @@ br.mo {
 .quick_link01 .img {
     max-width: 100%;
     font-size: 10px;
+    border : 1px solid #000;
 }
 .quick_link01.off {
     bottom: -100px;
@@ -628,16 +629,7 @@ br.mo {
 }
 
 /* 리니어펌? */
-.quick_event:before {
-    content: '';
-    display: block;
-    position: absolute;
-    z-index: -1;
-    width: 100%;
-    height: 221px;
-    margin-top: 162px;
-    background-color: #f97863;
-}
+
 .sect_linearfirm {
     position: relative;
     margin-bottom: -20px;
@@ -1299,6 +1291,16 @@ br.mo {
     margin-left: 54px;
 }
 @media screen and (min-width: 1200px) {
+    .quick_event:before {
+        content: '';
+        display: block;
+        position: absolute;
+        z-index: -1;
+        width: 100%;
+        height: 221px;
+        margin-top: 162px;
+        background-color: #f97863;
+    }
     /* footer */
     .footer .logo_img {
         width: 240px;
