--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1306,7 +1306,7 @@ br.mo {
     .quick_event {
         width: 100%;
         height: 400px;
-        background-image: url('/assets/images/event_0618.png');
+        background-image: url('/assets/images/event_0618.jpg');
         background-repeat: no-repeat ;
         background-size: cover; 
         background-position: center; 
