--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1306,7 +1306,7 @@ br.mo {
     .quick_event {
         width: 100%;
         height: 400px;
-        background-image: url('/assets/images/event_0618.jpg');
+        background-image: url('/assets/images/event_0707.jpg');
         background-repeat: no-repeat ;
         background-size: cover; 
         background-position: center; 
@@ -1334,7 +1334,7 @@ br.mo {
     .quick_event {
         width: 100%;
         height: 400px;
-        background-image: url('/assets/images/event_mobile_0618.png');
+        background-image: url('/assets/images/event_0707.jpg');
         background-repeat: no-repeat ;
         background-size: contain; 
         background-position: center; 
@@ -1358,6 +1358,16 @@ br.mo {
     }
 }
 @media screen and (max-width: 768px) {
+
+    .quick_event {
+        width: 100%;
+        height: 300px;
+        background-image: url('/assets/images/event_0707.jpg');
+        background-repeat: no-repeat ;
+        background-size: contain; 
+        background-position: center; 
+    }
+
     .footer {
         padding: 5% 0;
         background-color: #6e6e6e;
@@ -1389,6 +1399,14 @@ br.mo {
     }
 }
 @media screen and (max-width: 480px) {
+    .quick_event {
+        width: 100%;
+        height: 200px;
+        background-image: url('/assets/images/event_0707.jpg');
+        background-repeat: no-repeat ;
+        background-size: contain; 
+        background-position: center; 
+    }
     /* .footer .footer_inner_center {
          width: 92%;
     } */
